--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.8.0
+  font_awesome_flutter: ^10.0.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
