--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,9 @@ allprojects {
         mavenCentral()
     }
 }
+dependencies {
+    classpath 'com.google.gms:google-services:4.3.15'
+}
 
 rootProject.buildDir = "../build"
 subprojects {
