--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.0.0
   google_fonts: ^6.2.1
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.6
+  firebase_messaging: ^15.1.5
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
