--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,16 @@ dependencies:
   firebase_storage: ^12.3.6
   firebase_messaging: ^15.1.5
   http: ^1.2.2
+  auto_route: ^6.0.0  # Move auto_route to dependencies, not dev_dependencies
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-
+  build_runner: ^2.3.0  # or the latest version
+  auto_route_generator: ^6.0.0  # or the latest version
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
-        
-
