--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   firebase_messaging: ^15.1.5
   http: ^1.2.2
   auto_route: ^6.0.0  # Move auto_route to dependencies, not dev_dependencies
+  image_picker: ^1.1.2
+  cached_network_image: ^3.4.1
+
 
 dev_dependencies:
   flutter_test:
@@ -32,3 +35,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    
+
