--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   auto_route: ^6.0.0  # Move auto_route to dependencies, not dev_dependencies
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
+  intl: ^0.19.0
 
 
 dev_dependencies:
