--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
   intl: ^0.19.0
+  connectivity_plus: ^6.1.0
+
 
 
 dev_dependencies:
@@ -38,3 +40,9 @@ flutter:
     - assets/images/
     
 
+fonts:
+  - family: Roboto
+    fonts:
+      - asset: fonts/Roboto-Regular.ttf
+      - asset: fonts/Roboto-Bold.ttf
+        weight: 700
